# Web3-TGE-Monitor

./: .env.example  .gitignore  .gitmodules  MULTI_PLATFORM_DEVELOPMENT_PLAN.md  PHASE1_WEIBO_INTEGRATION_ISSUES.md  PROJECT_REVIEW_ISSUES.md  README-integrated.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh  test_mediacrawler_import.py  test_mediacrawler_native.py  test_playwright_integration.py  verify_integration.py  verify_step3_completion.py  verify_step4_completion.py
docs/: README-update.md  mediacrawler-integration.md  quick-start.md  xhs-platform-api.md
libs/: zhihu.js
mediacrawler/config/: base_config.py
mediacrawler/libs/: stealth.min.js
mediacrawler/tools/: crawler_util.py
scripts/: init-mediacrawler.sh
src/: __init__.py
src/ai/: __init__.py  ai_client.py  content_analyzer.py  investment_advisor.py  processing_manager.py  sentiment_analyzer.py
src/api/: __init__.py  dependencies.py  main.py
src/config/: keywords.py  mediacrawler_config.py  settings.py
tests/: conftest.py  test_ai.py  test_api.py  test_config.py  test_crawler.py  test_database.py  test_weibo_platform.py  test_zhihu_platform.py
tools/: README.md  test_bilibili_mediacrawler.py  test_douyin_mediacrawler.py  test_kuaishou_mediacrawler.py  test_tieba_mediacrawler.py  test_weibo_api_direct.py  test_weibo_environment.py  test_weibo_mediacrawler.py  test_weibo_qrcode_login.py  test_xhs_real_crawling.py  test_zhihu_client_real.py  test_zhihu_mediacrawler_complete_integration.py  test_zhihu_mediacrawler_integration.py  update_xhs_cookie.sh  verify_zhihu_cookie.py
(+43 files in other folders)
