[project]
name = "web3-tge-monitor"
version = "0.1.0"
description = "Web3 TGE监控和AI分析API系统"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # 复用MediaCrawler的核心依赖
    "aiofiles>=23.2.1",
    "aiomysql>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.24.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    
    # 新增依赖
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "structlog>=23.0.0",
    "redis>=4.6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true